--- a/templatedesing.html/stylesheet.html
+++ b/templatedesing.html/stylesheet.html
@@ -15,13 +15,18 @@
     .smaller-image {
         width: 100px;
       }
+      .thick-green-border {
+        border-color: green;
+        border-width: 10px;
+        border-style: solid;
+      }
   </style>
   
   <h2 class="red-text">CatPhotoApp</h2>
   <main>
     <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
   
-    <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."class="smaller-image"></a>
+    <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."class="smaller-image thick-green-border"></a>
   
     <div>
       <p>Things cats love:</p>
