--- a/templatedesing.html/stylesheet.html
+++ b/templatedesing.html/stylesheet.html
@@ -19,6 +19,7 @@
         border-color: green;
         border-width: 10px;
         border-style: solid;
+        border-radius: 10px;
       }
   </style>
   
