--- a/templatedesing.html/stylesheet.html
+++ b/templatedesing.html/stylesheet.html
@@ -21,6 +21,9 @@
         border-style: solid;
         border-radius: 50%;
       }
+      .silver-background {
+          background-color: silver;
+      }
   </style>
   
   <h2 class="red-text">CatPhotoApp</h2>
@@ -29,7 +32,7 @@
   
     <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."class="smaller-image thick-green-border"></a>
   
-    <div>
+    <div class="silver-background">
       <p>Things cats love:</p>
       <ul>
         <li>cat nip</li>
