--- a/templatedesing.html/stylesheet.html
+++ b/templatedesing.html/stylesheet.html
@@ -47,7 +47,7 @@
       </ol>
     </div>
   
-    <form action="https://freecatphotoapp.com/submit-cat-photo">
+    <form <form id="cat-photo-form"> action="https://freecatphotoapp.com/submit-cat-photo">
       <label><input type="radio" name="indoor-outdoor" checked> Indoor</label>
       <label><input type="radio" name="indoor-outdoor"> Outdoor</label><br>
       <label><input type="checkbox" name="personality" checked> Loving</label>
