--- a/templatedesing.html/stylesheet.html
+++ b/templatedesing.html/stylesheet.html
@@ -19,18 +19,18 @@
     .red-box {
       background-color: crimson;
       color: #fff;
-      padding-top: 40px;
-      padding-right: 20px;
-      padding-bottom: 20px;
-      padding-left: 40px;
+      margin-top: 40px;
+    margin-left: 40px;
+    margin-bottom: 20px;
+    margin-right: 20px;
       
     }
   
     .blue-box {
-        padding-top: 40px;
-        padding-right: 20px;
-        padding-bottom: 20px;
-        padding-left: 40px;
+        margin-top: 40px;
+    margin-left: 40px;
+    margin-bottom: 20px;
+    margin-right: 20px;
         background-color: blue;
       color: #fff;
      }
