--- a/templatedesing.html/stylesheet.html
+++ b/templatedesing.html/stylesheet.html
@@ -13,24 +13,18 @@
   
     .yellow-box {
       background-color: yellow;
-      padding: 10px;
+      padding: 20px 40px 20px 40px;
     }
   
     .red-box {
       background-color: crimson;
       color: #fff;
-      margin-top: 40px;
-    margin-left: 40px;
-    margin-bottom: 20px;
-    margin-right: 20px;
+      padding: 20px 40px 20px 40px;
       
     }
   
     .blue-box {
-        margin-top: 40px;
-    margin-left: 40px;
-    margin-bottom: 20px;
-    margin-right: 20px;
+        padding: 40px 20px 20px 40px;
         background-color: blue;
       color: #fff;
      }
