use clockwise notation to specify the margins of an elements

--- a/templatedesing.html/stylesheet.html
+++ b/templatedesing.html/stylesheet.html
@@ -19,12 +19,12 @@
     .red-box {
       background-color: crimson;
       color: #fff;
-      padding: 20px 40px 20px 40px;
+      margin: 20px 40px 20px 40px
       
     }
   
     .blue-box {
-        padding: 40px 20px 20px 40px;
+        margin: 40px 20px 20px 40px;
         background-color: blue;
       color: #fff;
      }
